--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -1,6 +1,6 @@
 .profile-page {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 100%;
   grid-template-rows: auto 1fr;
   width: 100vw;
   height: 100%;
